extendr-macros/tests/cases/case-extendr-macro.stderr
error: Unexpected key
 --> tests/cases/case-extendr-macro.rs:4:11
  |
4 | #[extendr(foo = true)]
  |           ^^^

error: unexpected end of input, `r_name` must be a string literal
 --> tests/cases/case-extendr-macro.rs:7:1
  |
7 | #[extendr(r_name = 1)]
  | ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `extendr` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, `mod_name` must be a string literal
  --> tests/cases/case-extendr-macro.rs:10:1
   |
10 | #[extendr(mod_name = 1)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `extendr` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, `use_rng` must be `true` or `false`
  --> tests/cases/case-extendr-macro.rs:13:1
   |
13 | #[extendr(use_rng = 1)]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `extendr` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected &self or &mut self
  --> tests/cases/case-extendr-macro.rs:22:20
   |
22 |     fn nonref_self(self) {}
   |                    ^^^^

error: found &self in non-impl function - have you missed the #[extendr] before the impl?
  --> tests/cases/case-extendr-macro.rs:27:24
   |
27 |     fn misplaced_macro(&self) {}
   |                        ^

error: const params not allowed in #[extendr] impl
  --> tests/cases/case-extendr-macro.rs:31:1
   |
31 | impl<const N: usize> FooStruct {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type params not allowed in #[extendr] impl
  --> tests/cases/case-extendr-macro.rs:38:1
   |
38 | impl<A> FooStructWithParam<A> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: where clause not allowed in #[extendr] impl
  --> tests/cases/case-extendr-macro.rs:41:1
   |
41 | impl FooStructWithParam<A> where A: usize {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Only struct is supported
  --> tests/cases/case-extendr-macro.rs:46:1
   |
46 | / enum FooEnum1 {
47 | |     A,
48 | |     B,
49 | |     C,
50 | | }
   | |_^

error: Only `struct` is supported
  --> tests/cases/case-extendr-macro.rs:53:1
   |
53 | / enum FooEnum2 {
54 | |     A,
55 | |     B,
56 | |     C,
57 | | }
   | |_^
